tests/baselines/reference/callConstructAssignment.errors.txt
==== tests/cases/compiler/callConstructAssignment.ts (2 errors) ====
    
    
    var foo:{ ( ):void; }
    
    var bar:{ new ( ):any; }
    
    foo = bar; // error
    ~~~
!!! callConstructAssignment.ts(7,1): error TS2012: Type 'new() => any' is not assignable to type '() => void':
!!! 	Type '() => void' requires a call signature, but type 'new() => any' lacks one.
    bar = foo; // error
    ~~~
!!! callConstructAssignment.ts(8,1): error TS2012: Type '() => void' is not assignable to type 'new() => any':
!!! 	Type 'new() => any' requires a construct signature, but type '() => void' lacks one.